--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -2,3 +2,4 @@ user_uuid="xxxxxxx-dded-497f-8f49-yyyyyyyyyyyyy"
 bucket_name="example-unique"
 index_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/index.html"
 error_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/error.html"
+content_version=2
