--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,6 +8,7 @@ tasks:
       cp $PROJECT_ROOT/terraform.tfvars.example $PROJECT_ROOT/terraform.tfvars
   - name: sinatra
     before: |
+      cd $PROJECT_ROOT
       cd terratowns_mock_server
       bundle install
       bundle exec ruby server.rb 
