--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,7 @@
 tasks:
   - name: terraform
+    env:
+      TF_LOG: DEBUG
     before: |
       cd $PROJECT_ROOT
       source ./bin/set_tf_alias
@@ -29,3 +31,6 @@ vscode:
   extensions:
     - amazonwebservices.aws-toolkit-vscode
     - hashicorp.terraform
+    - phil294.git-log--graph
+    - mhutchie.git-graph
+    - phil294.git-log--graph
