--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,5 +1,4 @@
-user_uuid="xxxxxxx-dded-497f-8f49-yyyyyyyyyyyyy"
-bucket_name="example-unique"
+terratowns_endpoint="https://terratowns.cloud/api"
 index_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/index.html"
 error_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/error.html"
 assets_path="/workspace/terraform-beginner-bootcamp-2023/public/assets"
